<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoIntro1"
        android:src="@drawable/img_3"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_marginTop="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoIntro2"
        android:src="@drawable/img"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoIntro3"
        android:src="@drawable/img_1"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logoIntro4"
        android:src="@drawable/img_2"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleIntro1"
        style="@style/introTitle"
        android:text="@string/title_menu_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="@+id/logoIntro1"
        app:layout_constraintStart_toStartOf="@+id/logoIntro1"
        app:layout_constraintTop_toBottomOf="@+id/logoIntro1"/>

    <TextView
        android:id="@+id/titleIntro2"
        style="@style/introTitle"
        android:text="@string/title_menu_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="@+id/logoIntro2"
        app:layout_constraintStart_toStartOf="@+id/logoIntro2"
        app:layout_constraintTop_toBottomOf="@+id/logoIntro2"/>

    <TextView
        android:id="@+id/titleIntro3"
        style="@style/introTitle"
        android:text="@string/title_menu_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="@+id/logoIntro3"
        app:layout_constraintStart_toStartOf="@+id/logoIntro3"
        app:layout_constraintTop_toBottomOf="@+id/logoIntro3"/>

    <TextView
        android:id="@+id/titleIntro4"
        style="@style/introTitle"
        android:text="@string/title_menu_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="@+id/logoIntro4"
        app:layout_constraintStart_toStartOf="@+id/logoIntro4"
        app:layout_constraintTop_toBottomOf="@+id/logoIntro4"/>

    <TextView
        android:id="@+id/descIntro1"
        style="@style/introDesc"
        android:text="@string/desc_menu_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="@+id/titleIntro1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleIntro1"
        app:layout_constraintTop_toBottomOf="@+id/titleIntro1"/>

    <TextView
        android:id="@+id/descIntro2"
        style="@style/introDesc"
        android:text="@string/desc_menu_2"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="@+id/titleIntro2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleIntro2"
        app:layout_constraintTop_toBottomOf="@+id/titleIntro2" />

    <TextView
        android:id="@+id/descIntro3"
        style="@style/introDesc"
        android:text="@string/desc_menu_3"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="@+id/titleIntro3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleIntro3"
        app:layout_constraintTop_toBottomOf="@+id/titleIntro3" />

    <TextView
        android:id="@+id/descIntro4"
        style="@style/introDesc"
        android:text="@string/desc_menu_4"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="@+id/titleIntro4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleIntro4"
        app:layout_constraintTop_toBottomOf="@+id/titleIntro4" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/dot1"
        app:altSrc="@drawable/ic_circle_full_30"
        app:srcCompat="@drawable/ic_circle_full_24"
        app:tint="@color/Red"
        android:layout_width="22dp"
        android:layout_height="34dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintVertical_bias="1.0"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/dot2"
        app:altSrc="@drawable/ic_circle_full_30"
        app:srcCompat="@drawable/ic_circle_full_24"
        app:tint="@color/Red"
        android:layout_width="34dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dot1"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/dot1"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/dot3"
        app:altSrc="@drawable/ic_circle_full_30"
        app:srcCompat="@drawable/ic_circle_full_24"
        app:tint="@color/Red"
        android:layout_width="34dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/dot2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/dot2"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/dot4"
        app:altSrc="@drawable/ic_circle_full_30"
        app:srcCompat="@drawable/ic_circle_full_24"
        app:tint="@color/Red"
        android:layout_width="34dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        app:layout_constraintBottom_toBottomOf="@+id/dot3"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/dot3"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintGuide_end="205dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="467dp"
        app:layout_constraintGuide_end="467dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:visibility="invisible"
        android:id="@+id/button"
        android:layout_width="309dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/Red"
        android:text="@string/startmasaging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dot1" />

</androidx.constraintlayout.widget.ConstraintLayout>