<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/storyChatFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="cap.tone.bangkitflexx.ui.drawer.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cap.tone.bangkitflexx.ui.drawer.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cap.tone.bangkitflexx.ui.drawer.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/loginActivity"
        android:name="cap.tone.bangkitflexx.ui.Login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/signupActivity"
        android:name="cap.tone.bangkitflexx.ui.Signup.SignupActivity"
        android:label="activity_signup"
        tools:layout="@layout/activity_signup" />
    <activity
        android:id="@+id/storychatActivity"
        android:name="cap.tone.bangkitflexx.ui.storyChat.StoryChatActivity"
        android:label="activity_storychat"
        tools:layout="@layout/activity_storychat" />
    <activity
        android:id="@+id/nav_project_manager"
        android:name="cap.tone.bangkitflexx.ui.ProjectManagement.PMActivity"
        android:label="activity_pmactivity"
        tools:layout="@layout/activity_pmactivity" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="cap.tone.bangkitflexx.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="cap.tone.bangkitflexx.ui.settings.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
    <fragment
        android:id="@+id/storyChatFragment"
        android:name="cap.tone.bangkitflexx.ui.storyChat.StoryChatFragment"
        android:label="fragment_story_chat"
        tools:layout="@layout/fragment_story_chat" />
</navigation>